# english-speaking-app

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  main.py  store.py
backend/app/models/: __init__.py  progress.py  scenario.py  session.py
backend/app/routers/: progress.py  scenarios.py  sessions.py
backend/app/schemas/: conversation.py
backend/app/services/: gemini.py  seed.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/design/: bolo-english.html
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatBubble.tsx  FeedbackPanel.tsx  MicButton.tsx  ProgressChart.tsx  ScenarioCard.tsx
frontend/src/hooks/: useSpeechRecognition.ts  useSpeechSynthesis.ts
frontend/src/pages/: Conversation.tsx  Feedback.tsx  Home.tsx  Progress.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
